[project]
name = "deep-learning-from-scratch-6"
version = "0.1.0"
description = "Learning deep learning from scratch - Book 6"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter",
    "mypy",
    "ruff",
]
llm = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]

[tool.uv]
dev-dependencies = [
    "ipython",
    "jupyter",
    "mypy",
    "ruff",
]
